Add global tags with descriptions in the swagger document
