# src/Endpoint/VMware.ScriptRuntimeService.APIGateway/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.1",
   "info": {
     "title": "Script Runtime Service for vSphere",
-    "description": "# Script Runtime Service API\r\n\r\nScript Runtime Service for vSphere (SRS) allows running PowerShell and PowerCLI scripts. SRS is a VC add-on that is deployed separately from VCSA. SRS can be accessed via REST API that allows you to create PowerShell instances and run PowerShell and PowerCLI scripts within. No Connect-VIServer is required to run PowerCLI against VC(s) SRS is registered to.\r\n\r\n## Authetication\r\n\r\nSRS uses VC SSO as Identity and Authentication Server. Two types of authentication are supported. SIGN and Basic. SIGN authentication is purposed for Service-To-Service access to SRS resources. For the convenience of the end-users, SRS supports basic authentication passing username and password which are used to acquire SAML HoK token for SRS solution. When basic is used SRS exchanges the username and password for SAML HoK token from the SSO server. SRS uses the SAML token to Connect PowerCLI to VC services in further operations. \r\nOn successful authentication SRS returns API Key which is required to authorize further SRS API calls.",
+    "description": "# Script Runtime Service API\r\n\r\nScript Runtime Service for vSphere (SRS) enables vSphere users and services (clients) to manage PowerCLI instances and run PowerCLI scripts. SRS clients authenticate once with vSphere credentials or access token. SRS clients can create PowerCLI instances and run scripts within. PowerCLI runs server-side and automatically connects to target vCenter servers. SRS tracks history of script outputs.",
     "version": "1.0",
     "x-vmw-vapi-codegenconfig": {
       "package-name": "com.vmware.srs"
@@ -39,7 +39,7 @@
     "/api/argument-scripts/templates": {
       "get": {
         "tags": [
-          "argumentscripts"
+          "argument_scripts"
         ],
         "summary": "List available argument script templates",
         "description": "### List available argument script templates\r\nArgument script templates are scripts with placeholders. When values replace the placeholders, the script can run in a given script runtime.\r\nArgument script templates help to convert simple type values to objects of types that can only be produced in a given script runtime. Those objects can be used as arguments to scripts' parameters.\r\n\r\nThis operation retrieves the available argument script templates.",
@@ -64,17 +64,15 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "argument_scripts",
-        "x-vmw-vapi-methodname": "list_templates",
         "x-vmw-doc-operation": "list.argument.scripts.templates"
       },
       "x-vmw-doc-resource": "ArgumentScript",
-      "x-vmw-doc-domain": "argumentscripts"
+      "x-vmw-doc-domain": "argument_scripts"
     },
     "/api/argument-scripts/templates/{id}": {
       "get": {
         "tags": [
-          "argumentscripts"
+          "argument_scripts"
         ],
         "summary": "Retrieves argument script template by given unique template identifier",
         "description": "### Retrieves argument script template by given unique template identifier\r\nThis operation returns argument script template for the specified template id.",
@@ -109,17 +107,15 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "argument_scripts",
-        "x-vmw-vapi-methodname": "get_template",
         "x-vmw-doc-operation": "get.argument.scripts.template"
       },
       "x-vmw-doc-resource": "ArgumentScript",
-      "x-vmw-doc-domain": "argumentscripts"
+      "x-vmw-doc-domain": "argument_scripts"
     },
     "/api/argument-scripts/script": {
       "post": {
         "tags": [
-          "argumentscripts"
+          "argument_scripts"
         ],
         "summary": "Creates scripts for a given script template id and placeholder values",
         "description": "### Creates scripts for a given script template id and placeholder values\r\nReplaces the placeholders in a given argument transformation script template with given values on the placeholder_value_list field\r\nThe resulting script can be provided to a **script execution** parameter that expects a specific script runtime type\r\n\r\n### Example\r\nIf the template argument transformation script is\r\n\r\nGet-VM -Id <vm-id> -Server <server>\r\n\r\nThe result of this operation with given Id 'vm-1' and Server 'server-1' is\r\n\r\nGet-VM -Id 'vm-1' -Server 'server-1'",
@@ -161,12 +157,10 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "argument_scripts",
-        "x-vmw-vapi-methodname": "create_script",
         "x-vmw-doc-operation": "create.argument.scripts.script"
       },
       "x-vmw-doc-resource": "ArgumentScript",
-      "x-vmw-doc-domain": "argumentscripts"
+      "x-vmw-doc-domain": "argument_scripts"
     },
     "/api/auth/login": {
       "post": {
@@ -502,7 +496,7 @@
     "/api/script-executions/{id}/output": {
       "get": {
         "tags": [
-          "scriptexecutions"
+          "script_еxecutions"
         ],
         "summary": "Retrieves output objects produced by a script execution.",
         "description": "### Retrieves output objects produced by a script execution ###\r\nOutput object could be in a different format depending on the requested output object format on **script execution** request.\r\nText and JSON are currently supported.\r\nWhen Text format is requested, the objects produced by the script execution are formatted in a table, the same way Format-Table formats the objects in PowerShell.\r\nWhen JSON format is requested, a custom json formatting is used to serialize the objects produced by the script execution. The JSON objects contain the type name and the full name of the implementing interfaces.",
@@ -570,17 +564,15 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "script_executions",
-        "x-vmw-vapi-methodname": "get_output",
         "x-vmw-doc-operation": "get.script.execution.output"
       },
       "x-vmw-doc-resource": "ScriptExecution",
-      "x-vmw-doc-domain": "scriptexecutions"
+      "x-vmw-doc-domain": "script_executions"
     },
     "/api/script-executions/{id}/streams/{stream-type}": {
       "get": {
         "tags": [
-          "scriptexecutions"
+          "script_еxecutions"
         ],
         "summary": "Retrieves list of stream records received during script execution.",
         "description": "### Retrieves list of stream records received during script execution\r\nDuring the execution of a script, the script execution engine collects streams that are produced by the script execution.\r\nThere are five stream types: information, error, warning, debug, verbose.",
@@ -657,17 +649,15 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "script_executions",
-        "x-vmw-vapi-methodname": "get_stream",
         "x-vmw-doc-operation": "get.script.execution.stream"
       },
       "x-vmw-doc-resource": "StreamRecord",
-      "x-vmw-doc-domain": "scriptexecutions"
+      "x-vmw-doc-domain": "script_executions"
     },
     "/api/script-executions": {
       "post": {
         "tags": [
-          "scriptexecutions"
+          "script_еxecutions"
         ],
         "summary": "Creates a script execution",
         "description": "### Create a script execution\r\n**Script execution** represents asynchronous execution of a script in a specified **runspace**\r\nWhen created **script execution** starts running in the **runspace**. To monitor the script execution\r\nprogress polling of the resource by its identifier should be used.\r\n### Retruns\r\nWhen the request is accepted **202 Accepted** with **Location** header is returned in the response that leads you to the **script execution** resource that is in running state initially.\r\nWhen script execution is requested with non-existing runspace  **404 Not Found** is returned.",
@@ -729,13 +719,11 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "script_executions",
-        "x-vmw-vapi-methodname": "create",
         "x-vmw-doc-operation": "create.script.execution"
       },
       "get": {
         "tags": [
-          "scriptexecutions"
+          "script_еxecutions"
         ],
         "summary": "List all script executions",
         "description": "### List all script executions      \r\n### Returns\r\nReturns a list of your script executions.",
@@ -780,17 +768,15 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "script_executions",
-        "x-vmw-vapi-methodname": "list",
         "x-vmw-doc-operation": "list.script.executions"
       },
       "x-vmw-doc-resource": "ScriptExecution",
-      "x-vmw-doc-domain": "scriptexecutions"
+      "x-vmw-doc-domain": "script_executions"
     },
     "/api/script-executions/{id}/cancel": {
       "post": {
         "tags": [
-          "scriptexecutions"
+          "script_еxecutions"
         ],
         "summary": "Cancels a script execution",
         "description": "### Cancel a script execution\r\nThis operation is equivalent to pressing Ctrl+C in the PowerShell console. If the script is cancellable it will be canceled.\r\nThe state of the **script execution** will become canceled after this operation. The operation is asynchronous. Cancel request\r\nis sent to the runtime.\r\n\r\n### Returns\r\nThe operation doesn't return value. **200 Ok** will be returned if the request is successful.",
@@ -838,17 +824,15 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "script_executions",
-        "x-vmw-vapi-methodname": "cancel",
         "x-vmw-doc-operation": "cancel.script.execution"
       },
       "x-vmw-doc-resource": "ScriptExecution",
-      "x-vmw-doc-domain": "scriptexecutions"
+      "x-vmw-doc-domain": "script_executions"
     },
     "/api/script-executions/{id}": {
       "get": {
         "tags": [
-          "scriptexecutions"
+          "script_еxecutions"
         ],
         "summary": "Retrieve a script execution",
         "description": "### Retrieve a script execution\r\nRetrieves the details of a **script execution**. You need only supply the unique script execution identifier that was returned on script execution creation.      \r\n### Returns\r\nReturns a **script execution** resource instance if a valid identifier was provided.\r\nWhen requesting the Id of a script execution that doesn't exist **404 NotFound** is returned.",
@@ -913,12 +897,10 @@
             "apiKeyAuth": [ ]
           }
         ],
-        "x-vmw-vapi-servicename": "script_executions",
-        "x-vmw-vapi-methodname": "get",
         "x-vmw-doc-operation": "get.script.execution"
       },
       "x-vmw-doc-resource": "ScriptExecution",
-      "x-vmw-doc-domain": "scriptexecutions"
+      "x-vmw-doc-domain": "script_executions"
     }
   },
   "components": {
@@ -1471,6 +1453,28 @@
     },
     {
       "signAuth": [ ]
+    }
+  ],
+  "tags": [
+    {
+      "name": "about",
+      "description": "About information for the product"
+    },
+    {
+      "name": "authentication",
+      "description": "SRS uses vCenter Server SSO it is registered to as Identity and Authentication Server. SRS does not apply any role-based access control to its features. Any vSphere user that can authenticate in vCenter Server SSO can access the SRS feature. SRS establishes PowerCLI connections to vCenter Servers on behalf of the authenticated user. PowerCLI scripts run on behalf of the authenticated user."
+    },
+    {
+      "name": "argument_scripts",
+      "description": "SRS has a number of script templates to help users pass PowerCLI objects as arguments to scripts with PowerCLI type parameters. Argument transformation scripts are scripts given on the Parameter structure that produce value which is used as an argument to specific parameter of a requested script execution."
+    },
+    {
+      "name": "runspaces",
+      "description": "Runsapace is a PowerShell instance running in a dedicated container as a Kubernetes pod on the Kubernetes cluster. Runspace hosts the script running engine. Runspaces run in containers to isolate different users scripts and to isolate the script runtime from the hosting infrastructure. Multiple users can access SRS and run scripts. Different users are isolated in their own PowerShell runtime without access to other users script runtime and the underlying infrastructure. A user can create more than one runspace. So single user can run scripts simultaneously in isolated runspace. User can use one runspace to run multiple scripts sequentially.<br/> <br/> SRS presents Runspace as an API Resource with unique Id, name optionally given by the user, and state. The state of a Runspace switches during the Runspace life cycle. When Runspace creation is requested, a Runspace resource is returned in creating state. Once a runspace is prepared for running its state is switch to ready. A Runspace is in active state when it is busy running a script. Active runpsaces do not accept script execution requests."
+    },
+    {
+      "name": "script_еxecutions",
+      "description": "To run a script in SRS, users request Script Execution. Script Execution is an SRS resource that represents a script that user requests to run in a Runspace. SRS assigns unique Id for a script execution and lets the user track the script progress and outcomes. When a script execution completes, SRS keeps a script execution record with the produced outputs. Script outputs consist of objects that script returns and messages that are raised in PowerShell run-time streams. PowerShell has six output streams Output, Error, Warning, Information, Debug, and Verbose. Everything produced by command return or Write-Output is recorded in the Output stream."
     }
   ]
 }
